--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wezz/yehhpay-m2",
+    "name": "yehhpay/yehhpay-m2",
     "type": "magento2-module",
     "version": "1.0.3",
     "description": "Yehhpay Payment Extension For Magento 2",
